@@ -1623,6 +1623,10 @@
 #define HAVE_SUBVIEWS_IVAR_SPI 1
 #endif
 
+#if PLATFORM(MAC) && __MAC_OS_X_VERSION_MAX_ALLOWED < 101500
+#define HAVE_SUBVIEWS_IVAR_DECLARED_BY_SDK 1
+#endif
+
 #if PLATFORM(MAC) || (PLATFORM(IOS_FAMILY) && __IPHONE_OS_VERSION_MIN_REQUIRED >= 110000) || PLATFORM(WATCHOS) || PLATFORM(APPLETV)
 #define USE_PLATFORM_SYSTEM_FALLBACK_LIST 1
 #endif
